# viwer_1.0

./: CMakeLists.txt  Makefile  README.md  main.cpp  mainpage.dox
Controller/: CMakeLists.txt
Controller/include/: command_manager.h  context_strategies.h  controller.h
Controller/source/: command_manager.cpp  context_strategies.cpp  controller.cpp
Model/: CMakeLists.txt
Model/include/: interface_model.h  interface_parser.h  interface_settings.h  matrix.h  matrix_generator.h  model.h  parser.h  settings.h
Model/src/: matrix.cpp  matrix_generator.cpp  model.cpp  parser.cpp  settings.cpp
Model/test/: test.cc
View/: CMakeLists.txt
View/form/: settings_widget.ui  view.ui
View/include/: commands.h  settings_widget.h  strategies.h  view.h  viewer_widget.h
View/source/: commands.cpp  settings_path.h.in  settings_widget.cpp  strategies.cpp  view.cpp  viewer_widget.cpp
dependencies/: CMakeLists.txt
modules/: FindCheck.cmake  clang-format.cmake
